squished forms fixed

--- a/app/assets/stylesheets/_watch_item.scss
+++ b/app/assets/stylesheets/_watch_item.scss
@@ -3,9 +3,7 @@
 
 form{
   align-self: flex-end;
-  height: min-content;
   overflow-y: visible;
-  height: 10vh;
   .field {
   }
   .actions {
